Discover button works

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -30,7 +30,7 @@
   <div class="container">
     <h1>Authorization Code Generated.</h1>
     <p>You have successfully authorized your Spotify account. You can now close this window and return to the Personalized Music Discovery.</p>
-    <img src="https://i.postimg.cc/tg86FpbS/projlogo.jpg">
+    <img src="../static/img/projlogo.jpg">
   </div>
 </body>
 </html>
