--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Music</title>
-    <link rel="stylesheet" href="web_home.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+
+    <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
+    <script src="../static/js/script.js"></script>
 </head>
 <body>
     <h1>Discover Music</h1>
@@ -15,15 +18,15 @@
             <div id="genre-selector">            
                 <label for="genre">Select a Genre:</label>
                 <select id="genre">
-                    <option value="Deep-House">Deep-House</option>
-                    <option value="Edm">Edm</option>
-                    <option value="Electronic">Electronic</option>
-                    <option value="Hip-Hop">Hip-Hop</option>
-                    <option value="House">House</option>
-                    <option value="Metal-core">Metal-core</option>
-                    <option value="Pop">Pop</option>
-                    <option value="Rock">Rock</option>
-                    <option value="Synth-pop">Synth-pop</option>
+                    <option value="deep-house">Deep-House</option>
+                    <option value="edm">Edm</option>
+                    <option value="electronic">Electronic</option>
+                    <option value="hip-hop">Hip-Hop</option>
+                    <option value="house">House</option>
+                    <option value="metalcore">Metal-core</option>
+                    <option value="pop">Pop</option>
+                    <option value="rock">Rock</option>
+                    <option value="synth-pop">Synth-Pop</option>
                 </select>
             </div>
             <br>
@@ -52,18 +55,17 @@
             </div>
             <br>
             <div>
-                <label for="quantity">No. of Songs: </label>
-                <input type="number" id="quantity" value="0" min="0" max="50" onkeydown="return false">
+                <label for="limit">No. of Songs: </label>
+                <input type="number" id="limit" value="0" min="0" max="50" onkeydown="return false">
             </div>
               </script>
             
-            <button id="discover-button">Discover</button>
+            <button type=button id="discover-button">Discover</button>
         </div>
     </div>
     </header>
     <main>
         <div id="results"></div>
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
