--- a/templates/playlist_show.html
+++ b/templates/playlist_show.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-  <div>
-    <iframe style="width: 700px; height: 584px; border: 0px solid black" name="spotify" id="spotify" src="https://embed.spotify.com/?uri=spotify:playlist:7dowgSWOmvdpwNkGFMUs6e"></iframe>
-    <br>
-    <a href="spotify:playlist:7dowgSWOmvdpwNkGFMUs6e" id="spotifylink">open in Spotify</a>
-  </div>
-</html>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/{playlist_id}?utm_source=generator" width="100%" height="100%" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
