--- a/templates/test2.html
+++ b/templates/test2.html
@@ -1,27 +1,29 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Music</title>
     <link rel="stylesheet" href="../static/css/style.css">
-  
-    <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
     <script src="../static/js/script.js"></script>
-  </head>
-  <body>
-    
+</head>
+
+<body>
+    <h1>Discover Music</h1>
     <header>
-        <h1>Discover Music</h1>
-            
+        <div id="header-content">
+            <div class="container_heading">
+                <h2>Give Your Preferences</h2>
+            </div>
+        </div>
     </header>
-        <main>
+    <main>
         <div class="container">
-            <span id="first_box">
-                <div class="container_heading">
-                    <h2>Give Your Preferences</h2>
-                </div>
-                <div class="preferences">
+            <div class="preferences">
+                <div id="genre-selector">
+                    <label for="category">Select a Genre:</label>
                     <div id="genre-categories">
-                        <label for="genre">Select a Genre:</label>
                         <select id="category" onchange="updateSubcategories()">
                             <option value="All Genres">All Genres</option>
                             <option value="Uplifting & Energetic">Uplifting & Energetic</option>
@@ -44,47 +46,27 @@
                             <option value="Show Tunes">Show Tunes</option>
                             <option value="Work-Out">Work-Out</option>
                         </select>
-                        <select id="genre">
+                        <select id="sub-category">
                             <!-- Subcategories will be populated dynamically based on the selected category -->
                         </select>
                     </div>
-                    <br>
-                    <div id="range-selectors">
-                        <div>
-                            <label for="acousticness">Select Acousticness range:</label>
-                            <input type="range" id="acousticness" min="0" max="1" step="0.01" value="0.5">
-                        </div>
-                        <div>
-                            <label for="speechiness">Select Speechiness range:</label>
-                            <input type="range" id="speechiness" min="0" max="1" step="0.01" value="0.5">
-                        </div>
-                        <div>
-                            <label for="danceability">Select Danceability range:</label>
-                            <input type="range" id="danceability" min="0" max="1" step="0.01" value="0.5">
-                        </div>
-                        <div>
-                            <label for="instrumentalness">Select Instrumentalness range:</label>
-                            <input type="range" id="instrumentalness" min="0" max="1" step="0.01" value="0.5">
-                        </div>
-                        <div>
-                            <label for="energy">Select Energy range:</label>
-                            <input type="range" id="energy" min="0" max="1" step="0.01" value="0.5">
-                        </div>
-                    </div>
-                    <br>
-                    <div>
-                        <label for="limit">No. of Songs: </label>
-                        <input type="number" id="limit" value="0" min="0" max="50" onkeydown="return false">
-                    </div>
-                    <button type="button" id="discover-button">Discover</button>
                 </div>
-                    <br>
-            </span>   
-            <div class="music_player"  id="results">
+                <br>
+                <div>
+                    <label for="limit">No. of Songs: </label>
+                    <input type="number" id="limit" value="0" min="0" max="50" onkeydown="return false">
+                </div>
+                <button type="button" id="discover-button">Discover</button>
             </div>
-            
+            <br>
+
+            <div class="music_player" id="results">
+                <!-- Music player content will be dynamically updated -->
+            </div>
+
         </div>
     </main>
+    
     <script>
         // Function to fetch JSON data from a file
         async function fetchGenreData() {
@@ -101,7 +83,7 @@
         // Function to update subcategories based on the selected category
         async function updateSubcategories() {
             const categorySelect = document.getElementById('category');
-            const subCategorySelect = document.getElementById('genre');
+            const subCategorySelect = document.getElementById('sub-category');
             const selectedCategory = categorySelect.value;
 
             // Clear existing subcategories
@@ -125,5 +107,6 @@
         // Initial call to populate subcategories
         updateSubcategories();
     </script>
-  </body>
-  </html>
+</body>
+
+</html>
